# Hallucination-Direction-Ablation

./: .gitignore  EXPERIMENT_PLAN_CHECKLIST.md  EXPERIMENT_REPORT.md  README.md  VERIFIER_RERANKING_PRINCIPLES.md  final_report.tex  guidance_for_milestone_report.md  main.py  proposal.tex  pyproject.toml
experiments/: README.md  requirements.txt
experiments/artifacts/: EXPERIMENT_PROGRESS_2026-04-24_BOUNDARY_PUSH.md  open_bridge_qwen4b_base_seed41.json  open_bridge_qwen4b_hda_seed41.json  truthfulqa_qwen4b_generate_base_seed41_refresh.json  truthfulqa_qwen4b_generate_dola_high_seed41_refresh.json  truthfulqa_qwen4b_generate_hda_dola_high_seed41_refresh.json  truthfulqa_qwen4b_generate_hda_seed41_refresh.json
experiments/scripts/: activation_probe.py  aggregate_patch_results.py  aggregate_verifier_results.py  analyze_directions_and_results.py  apply_manual_annotations_seed7.py  build_benign_drift_100.py  build_mean_difference_direction.py  build_mechanistic_annotation_pack.py  build_mechanistic_subspace.py  build_reviewed_mechanistic_dataset.py  build_silver_mechanistic_dataset.py  common.py  compare_regression_results.py  compare_verifier_variants.py  download_assets.py  drift_probe_eval.py  export_patched_model.py  extract_direction.py  extract_heretic_residuals.py  extract_heretic_simple_directions.py  extract_mechanistic_answer_states.py  extract_mechanistic_snippet_states.py  extract_taskaligned_direction.py  heretic_simple_runtime_eval.py  heretic_simple_weight_patch_eval.py  heretic_style_prompt_eval.py  heretic_style_weight_patch_eval.py  make_results_plots.py  (+27 more)
(+109 files in other folders)
