[project]
name = "hallucination-direction-ablation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"accelerate>=0.30",
	"bitsandbytes>=0.43",
	"datasets>=2.18",
	"matplotlib>=3.8",
	"numpy>=1.24",
	"pandas>=2.0",
	"scipy>=1.11",
	"torch>=2.1",
	"transformers>=4.51.0,<5.0",
	"tqdm>=4.66",
]
